# data-prep-kit

./: .make.versions  404.html  index.html
.github/workflows/: test.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
MAINTAINERS/: index.html
RELEASE/: index.html
data-processing-lib/doc/advanced-transform-tutorial/: index.html
data-processing-lib/doc/architecture/: index.html
data-processing-lib/doc/data-access-factory/: index.html
data-processing-lib/doc/overview/: index.html
data-processing-lib/python/: index.html  pyproject.toml
data-processing-lib/ray/: index.html  pyproject.toml
data-processing-lib/spark/: index.html  pyproject.toml
doc/data-processing/: index.html
doc/google-colab/: index.html
doc/mac/: index.html
doc/memory/: index.html
doc/repo/: index.html
kfp/: index.html
kfp/RELEASE/: index.html
kfp/kfp_ray_components/: Dockerfile  cleanupRayComponent.yaml  createRayClusterComponent.yaml  createRayComponent.yaml  deleteRayClusterComponent.yaml  executeRayJobComponent.yaml  executeRayJobComponent_multi_s3.yaml  executeSubWorkflowComponent.yaml  index.html  requirements.txt
kfp/kfp_support_lib/: index.html  pyproject.toml
kfp/transform_workflows/: .make.transforms_workflows
localExecutor/: Makefile  pyproject.toml
localExecutor/src/local_execution/: __init__.py  pipeline.py  step_execution.py  virtual_env_updater.py
release-notes/: index.html
scripts/k8s-setup/: index.html
search/: search_index.json
tools/ingest2parquet/: index.html
transforms/: index.html
transforms/packaging/: index.html
(+147 files in other folders)
