[project]
name = "data_prep_toolkit_local_executor"
version = "0.2.0.dev6"
requires-python = ">=3.10,<3.12"
description = "Data Preparation Kit Library. Local execution support"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "kfp==2.7.0",
    "docker",
    "data-prep-toolkit==0.2.0.dev6",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest>=7.3.2",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.0.0",
    "pre-commit>=3.3.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
]

[options]
package_dir = ["src"]

[options.packages.find]
where = ["src/local_execution"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 10"
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
include = ["src/*"]
